# dmerk

./: .gitignore  CHANGELOG.md  COLOR_HASH.md  LICENSE  README.md  create_test_directories.sh  noxfile.py  pyproject.toml
.githooks/: pre-commit  pre-push
dmerk/: cli.py  compare.py  constants.py  dmerk.py  merkle.py  merkleschema.json  utils.py
dmerk-tui/: dmerk_tui.py  dmerk_tui.tcss
dmerk-tui/widgets/: __init__.py  favorites_sidebar.py  file_manager.py  sidebar_button.py  stateful_button.py
dmerk/generate/: __init__.py  default.py  hashlib_file_digest.py  linux.py
dmerk/test/: conftest.py  test_cli.py  test_dmerk.py  test_dmerk_special.py  test_merkle.py  test_utils.py
dmerk/test/generate/: test_generate_common.py  test_generate_linux.py  test_generate_performance.py
dmerk/test/test_generate/: test_common.py  test_linux.py  test_misc.py  test_performance.py  test_profile.prof
dmerk/tui/: __init__.py  app.py  dmerk_tui.py  dmerk_tui.tcss  navigation.py  styles.tcss
dmerk/tui/mixins/: filter.py  navigation.py  refresh.py
dmerk/tui/widgets/: __init__.py  breadcrumbs.py  clearable_input.py  compare_widget.py  data_table.py  favorites_sidebar.py  file_manager.py  file_picker.py  input.py  rich_log.py  sidebar_button.py  stateful_button.py
requirements/: development  development-locked
